--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ avatar: https://avatars0.githubusercontent.com/u/23347594?v=3&s=460
 footer-links:
   dribbble:
   email:
-  facebook:
+  facebook: https://www.facebook.com/augusto.bet4
   flickr:
   github: barryclark/jekyll-now
   instagram:
